# hf-aria-dl

./: .gitignore  Cargo.toml  Dockerfile  flake.nix
src/: aria2.rs  hf.rs  main.rs
