[package]
name = "hf-aria-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.2"
regex = "1.10.3"
serde = {version = "1.0.196", features = ["derive"]}
ureq = {version = "2.9.6", features = ["native-tls", "native-certs", "json"]}
